<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.brycehan.boot</groupId>
        <artifactId>bryce-boot</artifactId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>
    <artifactId>bryce-system</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>bryce-system</name>
    <description>bryce-system</description>

    <!-- 版本属性 -->
    <properties>
        <java.version>17</java.version>
    </properties>

    <!-- 依赖 -->
    <dependencies>
        <dependency>
            <groupId>com.brycehan.boot</groupId>
            <artifactId>bryce-common</artifactId>
        </dependency>
        <dependency>
            <groupId>com.brycehan.boot</groupId>
            <artifactId>bryce-framework</artifactId>
        </dependency>

        <!-- MySQL驱动 -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <scope>runtime</scope>
        </dependency>
        <!-- PostgreSQL驱动 -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- aop框架 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-aop</artifactId>
        </dependency>

        <!-- 工具 -->
        <!-- easy-trans 数据翻译插件 -->
<!--        <dependency>-->
<!--            <groupId>com.fhs-opensource</groupId>-->
<!--            <artifactId>easy-trans-spring-boot-starter</artifactId>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>com.fhs-opensource</groupId>-->
<!--            <artifactId>easy-trans-mybatis-plus-extend</artifactId>-->
<!--        </dependency>-->
<!--        &lt;!&ndash; Lombok &ndash;&gt;-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <!-- devtools -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>

    </dependencies>

</project>
